gcc/testsuite/rust/rustc/ui/error-codes/E0599.rs
struct Foo;

fn main() {
    || if let Foo::NotEvenReal() = Foo {}; // { dg-error ".E0599." "" { target *-*-* } }
}

